I added a bit of styling

--- a/lecture1/index.html
+++ b/lecture1/index.html
@@ -4,7 +4,7 @@
 		<title>MyApp</title>
 	</head>
 	
-	<style type="text/css">
+	<LINK href="style.css" rel="stylesheet" type="text/css">
 	</style>
 	
 	<body>
