--- a/lecture1/index.html
+++ b/lecture1/index.html
@@ -3,9 +3,13 @@
 	<head>
 		<title>MyApp</title>
 	</head>
-	
+	<link rel="apple-touch-icon" href="appicon.png" />
+		<link rel="apple-touch-startup-image" href="startup.png">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-webapp-status-bar-style" content=”black" />
+		<meta name="viewport" content="width=device-width, user-scalable=no" />
 	<LINK href="style.css" rel="stylesheet" type="text/css">
-	</style>
+	
 	
 	<body>
 	 		<h2>Rio Akasaka</h2>
@@ -16,14 +20,15 @@
 			<li>Go undercover</li>
 			<li>Learn HTML</li>
 		</ul>
-	
-		<h3>A nice button</h3>
+	<p><img width="50" class="opacity" src="seal.png" /></p>
+		<h3 class="newC">A nice button</h3>
 
 		<h3>An invisible seal</h3>
-
 		<h3>A video</h3>
-
+		<video width="300" height="240" controls="controls">
+		  <source src="gizmo.mp4" type="video/mp4" />
+		</video>
+		<div class="button">click me</div>
 		<h3>Two boxes side by side</h3>
-
 	</body>
 </html>
